# azure-openai

./: .gitignore  README.md  pyproject.toml
infra/: main.bicep
infra/core/host/: appservice.bicep
scripts/: deploy_infrastructure.sh  indexing.py
workshop_oai_qa/: chain.py
